added live version link

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This is a small web tool for picking and editing colorcoding schemes.
+Live version should be up at:
+
+http://tobyho.com/uploads/colorcode_lineup/app.html
