added blog post link

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 This is a small web tool for picking and editing colorcoding schemes.
-Live version should be up at:
 
-http://tobyho.com/uploads/colorcode_lineup/app.html
+See:
+
+blog post: http://tobyho.com/ColorCode_Lineup_-_A_ColorCode_Scheme_Editor
+live version: http://tobyho.com/uploads/colorcode_lineup/app.html
